--- a/index.html
+++ b/index.html
@@ -149,7 +149,11 @@
                                 <div class="sec-title-shape mb-4">
                                     <img src="assets/images/title-shape.svg" alt="">
                                 </div>
-                                <p></p>
+                                <p>This is Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe dolore at
+                                    aspernatur eveniet temporibus placeat voluptatum quaerat accusamus possimus
+                                    cupiditate, quidem impedit sed libero id perspiciatis esse earum repellat quam.
+                                    Dolore modi temporibus quae possimus accusantium, cum corrupti sed deserunt iusto at
+                                    sapiente nihil sint iste similique soluta dolor! Quod.</p>
                             </div>
                         </div>
                     </div>
